Add multiple linear regression

--- a/module8/SimpleLinearRegression.ipynb
+++ b/module8/SimpleLinearRegression.ipynb
@@ -511,10 +511,84 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### TASK: Repeat the process using FUELCONSUMPTION_COMB and CO2EMISSIONS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MUltiple Regression Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: [[10.9409083   7.35329133  9.82450304]] \n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import linear_model\n",
+    "regr = linear_model.LinearRegression()\n",
+    "x = np.asarray(train[['ENGINESIZE', 'CYLINDERS', 'FUELCONSUMPTION_COMB']])\n",
+    "y = np.asarray(train[['CO2EMISSIONS']])\n",
+    "regr.fit(x, y)\n",
+    "print(f'Coefficients: {regr.coef_} ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 579.9150119359595\n",
+      "Variance Score 0.8449335617696148\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\hvalle\\AppData\\Local\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but LinearRegression was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get your prediction\n",
+    "y_hat = regr.predict(test[['ENGINESIZE', 'CYLINDERS', 'FUELCONSUMPTION_COMB']])\n",
+    "x = np.asanyarray(test[['ENGINESIZE', 'CYLINDERS', 'FUELCONSUMPTION_COMB']])\n",
+    "y = np.asanyarray(test[['CO2EMISSIONS']])\n",
+    "print(f'MSE: {np.mean((y_hat - y)**2)}')\n",
+    "print(f'Variance Score {regr.score(x, y)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TASK: Try Multiple Linear Regression using: FUELCONSUMPTION_CITY and FUELCONSUMPTION_HWY instead FUELCONSUMPTION_COMB\n",
+    "\n",
+    "Does it result in better accuracy?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
